# pest

./: .gitignore  .ruff.toml  ARCHITECTURE.md  LICENSE  README.md  Taskfile.yml  conftest.py  noxfile.py  pyproject.toml  🐀 pest.code-workspace
.github/actions/check-version/: action.yml  version_checker.py
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
.github/workflows/composites/setup/: action.yml
.patches/: patches.json
.patches/rodi/: __init__.py  __init__.py.original  __init__.py.original.patch
example/app/: app_module.py  main.py
example/app/data/: data.py
example/app/modules/auth/: _module.py  controller.py
example/app/modules/todo/: module.py
example/bruno/: bruno.json
example/bruno/todo/: create-new.bru  update.bru
examples/: auth_example.py
examples/api/app/: main.py
examples/api/bruno/auth/: login.bru
examples/api/bruno/environments/: local.bru
examples/scheduler/: main.py
pest/: __init__.py  factory.py
pest/core/: application.py  controller.py  handler.py  module.py
pest/core/common/: __init__.py
pest/core/types/: fastapi_params.py  status.py
pest/decorators/: _common.py  controller.py  guard.py  handler.py  injectable.py  module.py
pest/decorators/dicts/: controller_dict.py  handler_dict.py  module_dict.py
pest/di/: __init__.py  injection.py
pest/exceptions/: __init__.py  base.py  handle.py
pest/exceptions/base/: pest.py
pest/exceptions/http/: http.py  status.py
pest/factory/: __init__.py  app_creator.py  openapi.py  post_app.py  pre_app.py  preapp.py
pest/logging/: __init__.py
pest/logging/loguru/: __init__.py  loguru.py
pest/metadata/: __init__.py  meta.py
pest/metadata/types/: __init__.py  _meta.py  controller_meta.py  handler_meta.py  injectable_meta.py  module_meta.py
pest/middleware/: base.py  di.py  types.py
pest/primitives/: application.py  common.py  controller.py  handler.py  module.py
pest/primitives/common/: __init__.py
pest/primitives/types/: fastapi_params.py  status.py
pest/schedule/: __init__.py
pest/schedule/decorators/: cron.py
pest/schedule/module/: schedule_module.py
pest/utils/: colorize.py  decorators.py  functions.py  module.py  protocols.py
pest/utils/exceptions/: base.py
pest/utils/fastapi/: router.py
tests/: conftest.py  test_app.py  test_controller.py  test_di.py  test_exception_handler.py  test_fastapi.py  test_guard.py  test_handler.py  test_lifecycle.py  test_loguru.py  test_module.py  test_schedule.py  test_utils.py
tests/cfg/: di_scopes_primitives.py  fixtures.py  pest_primitives.py
tests/cfg/app/: app.py  app_module.py
tests/cfg/test_modules/: di_scopes_primitives.py  fastapi_dependencies.py  fastapi_params.py  pest_primitives.py  rodi_route_dependencies.py  rodi_route_dependencies_functions.py
tools/: exec.py  format.py  generator.py  patch.py
tools/tasks/: generator.py  patch.py
tools/testing/: loader.py  plugin.py
(+22 files in other folders)
