[tool.poetry]
name = "pest"
version = "0.0.1"
description = ""
authors = ["Lucas Colombo <lucasncolombo@gmail.com>"]
readme = "README.md"

packages = [
    { include = "pest" },
    # { include = "tools"  },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.2"
pydantic = "1.10.8"
rodi = "^2.0.4"
uvicorn = "^0.23.2"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
ipykernel = "^6.25.2"
pytest = "^7.4.3"
httpx = "^0.25.1"

[tool.poetry.scripts]
"patches:make"="tools.patch:make_patches"
"patches:apply"="tools.patch:apply_patches"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
