[tool.poetry]
name = "pest"
version = "0.0.1"
description = "🐀 ⇝ fastapi + rodi + mvc | python library for building modularized API's. Inspired by NestJS."
authors = ["lucaslabs <lucas@lucaslabs.tech>"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "pest" },
    # { include = "tools"  },
]

[tool.poetry.dependencies]
dacite = "^1.8.1"
fastapi = ">0.103, <0.105.0"
loguru = "^0.7.2"
pydantic = ">=1.7.4,!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0"
python = ">=3.8"
rodi = "^2.0.5"

[tool.poetry.extras]
logs = ["loguru"]

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
httpx = "^0.25.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.3"
uvicorn = "^0.23.2"

[tool.poetry.scripts]
"patches:make"="tools.patch:make_patches"
"patches:apply"="tools.patch:apply_patches"
"generate:types"="tools.generator:types"
"fmt:check"="tools.format:check"
"fmt:fix"="tools.format:fix"
"lint:check"="tools.format:lint_check"
"lint:fix"="tools.format:lint_fix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
extend-exclude = ".patches/"